--- a/css/main.css
+++ b/css/main.css
@@ -250,6 +250,15 @@ top: -8px;
   color: #fff;
 }
 
+.fancybox-overlay a {
+  color: rgba(20, 20, 20, 1);
+  margin: 0 6px;
+}
+
+.fancybox-overlay a:hover {
+  color: #0eb493;
+}
+
 .carousel-indicators {
   bottom: 10px;
   left: inherit;
@@ -330,8 +339,24 @@ top: -8px;
 
 
 /*=========================================
-	Our Works
+	Our Dojos
 ==========================================*/
+
+
+.project-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+}
+
+#dojos .project-wrapper .work-item {
+   flex: 0 0 30%;
+}
+
+#history .project-wrapper .work-item {
+  flex: 0 0 22%;
+}
 
 .work-filter {
   margin-bottom: 35px;
@@ -415,7 +440,7 @@ top: -8px;
   border: 1px solid #fff;
   border-radius: 50%;
   display: inline-block;
-  margin-top: 20%;
+  margin-top: 4%;
   padding: 7px 10px;
 }
 
@@ -427,15 +452,13 @@ top: -8px;
   font-size: 18px;
   font-weight: 700;
   line-height: 24px;
-  margin: 25px 0 8px;
+  margin: 20px 0 8px;
 }
 
 .work-item .overlay p {
   font-size: 14px;
   line-height: 24px;
 }
-
-
 
 /*=========================================
 	Our Team Member
@@ -554,6 +577,14 @@ top: -8px;
   text-transform: uppercase;
 }
 
+/*=========================================
+	Calendar
+==========================================*/
+
+.calendar {
+  max-width: 90%;
+    margin: 0 auto;
+}
 
 /*=========================================
 	Contact Us
