--- a/css/main.css
+++ b/css/main.css
@@ -192,7 +192,7 @@ body > section,
 }
 
 .carousel-caption {
-  top: 50%;
+  top: 30%;
 }
 
 .carousel-caption h2 {
@@ -351,7 +351,7 @@ top: -8px;
 }
 
 #dojos .project-wrapper .work-item {
-   flex: 0 0 30%;
+   flex: 0 0 40%;
 }
 
 #history .project-wrapper .work-item {
@@ -483,6 +483,10 @@ top: -8px;
 	line-height: 24px;
 }
 
+.team-member {
+  margin-bottom: 20px;
+}
+
 .team-member h4 {
   color: #062033;
   font-size: 18px;
@@ -508,10 +512,12 @@ top: -8px;
 }
 
 .team-member .social-links {
-  margin-top: 24%;
+  margin-top: 10px;
 }
 
-.team-member .social-links li a {
+
+
+.team-member .social-links li a, .work-item  .social-links li a {
   background-color: #0d7c67;
   color: #fff;
   height: 42px;
