Including "Dojos do Norte" and improvments on mobile layout

--- a/css/main.css
+++ b/css/main.css
@@ -189,6 +189,7 @@ body > section,
 
 #slider .carousel-inner .item {
   background-size: cover;
+  background-position: center;
 }
 
 .carousel-caption {
