--- a/css/gasshuku2022.css
+++ b/css/gasshuku2022.css
@@ -59,3 +59,39 @@ h4 {
 .registration .sec-sub-title {
   margin: 35px 0 10px;
 }
+
+.arrowdown {
+  margin-top: 20px;
+  width: 40px;
+}
+
+.arrowdown {
+  -webkit-transition-property: -webkit-transform;
+  -webkit-transition-duration: 7s;
+  -moz-transition-property: -moz-transform background-color;
+  -moz-transition-duration: 2s;
+  -webkit-animation-name: grow;
+  -webkit-animation-duration: 2s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  -moz-animation-name: grow;
+  -moz-animation-duration: 2s;
+  -moz-animation-iteration-count: infinite;
+  -moz-animation-timing-function: linear;
+}
+
+@keyframes grow {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+html {
+  scroll-behavior: smooth;
+}
